--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -1,11 +1,15 @@
 ﻿<header>
-    <link rel="stylesheet" href="/css/styles.css">
-
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Vinyls</a></li>
-            <li><a href="#">My Account</a></li>
-        </ul>
-    </nav>
+	<h1>Vinyl Shop</h1>
+	<nav>
+		<ul>
+			<li><a href="https://localhost:7224">Home</a></li>
+			<li><a href="/vinyl/list">Shop</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+	<form>
+		<input type="text" placeholder="Search...">
+		<button type="submit">Search</button>
+	</form>
 </header>
