page for adding new vinyls added

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 			}
 		</ul>
 
-		<a href="#" class="btn-all-vinyls">View All Vinyls</a>
+		<a href="/vinyl/list" class="btn-all-vinyls">View All Vinyls</a>
 	</main>
 
 	<footer>
