--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -1,10 +1,15 @@
-﻿<header>
+﻿<head>
+	<title>Vinyl Shop</title>
+	<link rel="stylesheet" type="text/css" href="/CSS/styles.css">
+</head>
+
+<header>
 	<h1>Vinyl Shop</h1>
 	<nav>
 		<ul>
 			<li><a href="https://localhost:7224">Home</a></li>
 			<li><a href="/vinyl/list">Shop</a></li>
-			<li><a href="#">About</a></li>
+			<li><a href="/vinyl/addnewvinyl">Add New Vinyl</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
 	</nav>
