--- a/wwwroot/CSS/styles.css
+++ b/wwwroot/CSS/styles.css
@@ -102,7 +102,8 @@ h2 {
 .vinyl {
     margin: 10px;
     width: 250px;
-    box-shadow: 0 0 10px rgba(0
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border-radius: 5
 }
 
 .btn-all-vinyls {
