Home controller was removed, we'll use Vinyl instead

--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -7,7 +7,8 @@
 	<h1>Vinyl Shop</h1>
 	<nav>
 		<ul>
-			<li><a href="https://localhost:7224">Home</a></li>
+			@*<li><a href="https://localhost:7224">Home</a></li>*@
+			<li><a href="/vinyl/home">Home</a></li>
 			<li><a href="/vinyl/list">Shop</a></li>
 			<li><a href="/vinyl/addnewvinyl">Add New Vinyl</a></li>
 			<li><a href="#">Contact</a></li>
