--- a/Views/Vinyl/AddNewVinyl.cshtml
+++ b/Views/Vinyl/AddNewVinyl.cshtml
@@ -7,7 +7,7 @@
         <label for="albumName">Album Name:</label>
         <input type="text" class="form-control" id="albumName" name="AlbumName">
     </div>
-    @*<div class="form-group">
+    <div class="form-group">
         <label for="artistName">Artist Name:</label>
         <input type="text" class="form-control" id="artistName" name="ArtistName">
     </div>
@@ -20,6 +20,10 @@
         <textarea class="form-control" id="description" name="Description"></textarea>
     </div>
     <div class="form-group">
+        <label for="imageUrl">ImageUrl:</label>
+        <textarea class="form-control" id="imageUrl" name="ImageUrl"></textarea>
+    </div>
+    <div class="form-group">
         <label for="isVinylOfWeek">Is Vinyl of the Week:</label>
         <input type="checkbox" id="isVinylOfWeek" name="IsVinylOfWeek" value="true">
     </div>
@@ -30,8 +34,7 @@
             {
                 <option value="@category.CategoryName">@category.CategoryName</option>
             }
-
         </select>
-    </div>*@
+    </div>
     <button type="submit">Add Vinyl</button>
 </form>
